[package]
name = "client"
version = "0.2.0"
rust-version = "1.75.0"
edition = "2021"

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
raydium-cp-swap = {path = "../programs/cp-swap", features = ["no-entrypoint", "client"]}
solana-sdk = "2.1.6"
solana-client = "2.1.6"
solana-account-decoder = "2.1.6"
solana-transaction-status = "2.1.6"
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.13.0"
spl-memo = "6.0.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.94"
rand = "0.8.5"
hex = "0.4.3"
configparser = "3.1.0"
serde_json = { version = "1.0.133" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.9"
bs58 = { version = "0.5.1"}
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"